Refactored the checkboxes to display down the page, also fixed the model function to remove previously associated questions if they are deselected

--- a/README.rdoc
+++ b/README.rdoc
@@ -4,3 +4,36 @@ tax-determiner is an app that will help users determine the level of tax service
 
 It takes into consideration the user's experience level and events that have taken place during the year to make
 the determination.
+
+I developed the scores and the the effect of the user's experience from my own experience as a licensed CPA, and from
+other CPAs I know in the profession.
+
+Basic setup of the app for your localhost server:
+
+1.) Clone from github.
+2.) Bundle the gems, just in case you don't have something.
+3.) Create the db, migrate, and seed the test database.
+4.) Add in your account info for your mailer (Sendgrid/Mandrill/etc).
+5.) Run rake. All the tests should pass.
+
+You should be all set for localhost running at this point.
+
+For pushing up to Heroku:
+
+Create the app on Heroku and run the setup within the app folder on your local folder the do the following:
+
+1.) You'll need to push the environment variables for mandrill (or sendgrid if you're using that)
+2.) Add the applicable mailer app to Heroku.
+3.) Change the domain to your applicable domain in the production.rb enviroment.
+4.) Push the updated app to Heroku.
+5.) Seed the production database
+
+After this you should be ready to roll with Heroku.
+
+Future build outs:
+1.) Lead generation additions for Turbo Tax, H&R Block, and CPA firms.
+
+2.) My intention is to build this app out for the other types of returns. As they can be much more complicated
+and can cause wildly different pricing for a return CPA firms will find this additional info helpful.
+
+3.) I'd like to add a Q&A page for users to post questions that would be answered by a professional.
